--- a/05-1_louispoulse/css/main.css
+++ b/05-1_louispoulse/css/main.css
@@ -12,13 +12,6 @@
     font-style: normal;
 }
 
-@font-face {
-    font-family: 'RixInooAriDuriR';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2207-01@1.0/RixInooAriDuriR.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-}
-
 * {
     outline: 1px solid rgb(163, 206, 184);
     font-family: 'Pretendard-Regular';
@@ -46,7 +39,6 @@
     height: 100vh;
     background: #000;
     color: #fff;
-    padding: 0 60px;
 }
 
 .gnb a {
@@ -62,6 +54,7 @@
 
 .gnb>ul>li {
     font-size: 17px;
+    padding: 0 50px;
 }
 
 .gnb>ul>li ul {
@@ -213,7 +206,6 @@ header .top button {
     position: relative;
     width: 180px;
     border-radius: 50%;
-    /* box-shadow: 0 0 2px #111; */
     background: #f9f9f9;
     margin: 0 0 20px 0;
 }
@@ -226,7 +218,7 @@ header .top button {
     content: "";
     width: 110%;
     height: 110%;
-    border: 3px solid #ddd;
+    border: 2px solid #ddd;
     border-radius: 50%;
     opacity: 0;
     transition: 0.5s;
@@ -243,27 +235,26 @@ header .top button {
     font-weight: 600;
 }
 
-/* show */
-.show {
+/* col */
+.col {
     padding: 70px 0 100px 0;
 }
 
-.show .container .box:nth-child(1){
+.col .container .top {
     margin: 0 0 150px 0;
 }
 
-.show .box {
+.col .box {
     display: flex;
-    justify-content: space-between;
     gap: 60px;
 }
 
-.show .thumb figure {
+.col .thumb figure {
     position: relative;
     width: 500px;
 }
 
-.show .thumb figure::after {
+.col .thumb figure::after {
     position: absolute;
     top: -20px;
     left: 20px;
@@ -271,26 +262,30 @@ header .top button {
     display: block;
     width: 100%;
     height: 100%;
-    border: 3px solid #333;
+    border: 2px solid #333;
     border-radius: 0 35% 0 0;
 }
 
-.show .thumb img {
+.col .thumb img {
     border-radius: 0 35% 0 0;
 }
 
-.show .content {
+.col .content {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     overflow: hidden;
 }
 
-.show .top .content .txt {
+.col .box .content .txt {
+    margin: 0 0 120px 0;
+}
+
+.col .top .content .txt {
     text-align: end;
 }
 
-.show .content h2 {
+.col .content .txt h2 {
     margin: 0 0 30px 0;
     font-family: 'HSBombaram';
     font-size: 50px;
@@ -298,7 +293,7 @@ header .top button {
     letter-spacing: 5px;
 }
 
-.show .content h2 span {
+.col .content .txt h2 span {
     display: inline-block;
     margin: 10px 0 0 0;
     text-shadow: 0 0 1px #000;
@@ -306,7 +301,7 @@ header .top button {
     font-family: 'HSBombaram';
 }
 
-.show .content .txt a {
+.col .content .txt a {
     font-size: 15px;
     font-weight: 600;
     color: #999;
@@ -314,7 +309,7 @@ header .top button {
     transition: 0.5s;
 }
 
-.show .content .txt a::after {
+.col .content .txt a::after {
     content: "";
     display: block;
     width: 100%;
@@ -324,54 +319,69 @@ header .top button {
     transition: 0.5s;
 }
 
-.show .content .txt a:hover {
+.col .content .txt a:hover {
     color: #111;
 }
 
-.show .content .txt a:hover::after {
+.col .content .txt a:hover::after {
     background: #111;
 }
 
-.show .content .itm_slide figure {
-    padding: 0 15px;
+.col .content .col_arrows {
+    color: #999;
+    text-align: end;
+    font-size: 21px;
+}
+
+.col .content .col_arrows i {
+    border: 1px solid #999;
+    border-radius: 50%;
+    padding: 5px;
+    margin: 0 10px 0 0;
+}
+
+.col .content .itm_slide figure {
+    padding: 0 10px;
     text-align: center;
 }
 
-.show .content .itm_slide img {
+.col .content .itm_slide img {
     margin: 0 0 25px 0;
+    background: #f9f9f9;
+    border-radius: 30%;
 }
 
-.show .content .itm_slide p {
+.col .content .itm_slide p {
     margin: 0 0 10px 0;
     font-size: 17px;
     font-weight: 500;
 }
 
-.show .content .itm_slide strong {
+.col .content .itm_slide strong {
     margin: 0 0 20px 0;
     display: block;
     color: #999;
 }
 
-.show .content .itm_slide a {
+.col .content .itm_slide a {
     margin: 0 0 20px 0;
     display: inline-block;
     color: #999;
     font-weight: 500;
     transition: 0.5s;
-    text-decoration: underline overline ;
+    text-decoration: underline overline;
     text-underline-position: under;
 }
 
 
-.show .content .itm_slide a:hover {
+.col .content .itm_slide a:hover {
     color: #111;
 }
 
-.show .content .itm_slide a:hover::after {
+.col .content .itm_slide a:hover::after {
     background: #111;
 }
 
-.shox .second .content .txt{
-    text-align: start;
+.col .bt .thumb figure {
+    transform: translateX(-22px);
 }
