--- a/11_doosi/src/css/Main.scss
+++ b/11_doosi/src/css/Main.scss
@@ -1,28 +1,66 @@
 @use './basic.scss';
 
 .sc {
-    border-top: 3px solid basic.$m_c;
+    border-bottom: 3px solid basic.$m_c;
 }
 
+//MainVisual
 .MainVisual {
     .s_box {
-        display: flex;
-    }
+        position: relative;
 
-    figure {
-        height: 500px;
-    }
+        figure {
+            height: 500px;
+            width: 50%;
+            border-right: 3px solid basic.$m_c;
+        }
 
-    .itm01 {
-        background: url(../../public/assets/img/main_v_01.jpg)no-repeat center center/cover;
-    }
+        .itm01 {
+            background: url(../../public/assets/img/main_v_01.jpg)no-repeat center center/cover;
+        }
 
-    .itm02 {
-        background: url(../../public/assets/img/main_v_02.jpg) no-repeat center center/cover;
-    }
+        .itm02 {
+            background: url(../../public/assets/img/main_v_02.jpg) no-repeat center center/cover;
+        }
 
-    .itm03 {
-        background: url(../../public/assets/img/main_v_03.jpg) no-repeat center center/cover;
+        .itm03 {
+            background: url(../../public/assets/img/main_v_03.jpg) no-repeat center center/cover;
+        }
+
+        .mv_txt {
+            position: absolute;
+            top: 50%;
+            left: 75%;
+            width: 50%;
+            transform: translate(-50%, -50%);
+            color: basic.$txt_c;
+            text-align: center;
+            white-space: pre-wrap;
+
+            span {
+                position: relative;
+                display: inline-block;
+                border-radius: 50%;
+                padding: 48px 14px;
+                margin: 0 0 30px 0;
+                font-family: basic.$hah_f;
+                font-size: 25px;
+                font-weight: 700;
+                text-transform: uppercase;
+                background: rgba(125, 157, 145, 0.5);
+            }
+
+            h2 {
+                margin: 0 0 15px 0;
+                font-size: 35px;
+                font-weight: 700;
+            }
+
+            p {
+                font-size: 17px;
+                font-weight: 500;
+            }
+        }
     }
 
 }
@@ -57,6 +95,7 @@
             text-align: center;
             font-size: 19px;
             font-weight: 700;
+            color: basic.$txt_c;
         }
     }
 }
@@ -65,9 +104,199 @@
 .Subscribe {
     display: flex;
     justify-content: space-between;
-    padding: 100px 0;
 
-    .left {
-        margin: 0 0 0 calc((100% - 1200px)/2);
+    .S_left {
+        margin: auto 50px auto calc((100% - 1200px)/2);
+
+        .S_tit {
+            display: flex;
+            justify-content: space-between;
+            border-bottom: 2px solid basic.$m_c;
+            margin: 0 0 30px 0;
+            line-height: 40px;
+
+
+            h2 {
+                font-family: basic.$hah_f;
+                font-size: 30px;
+                font-weight: 800;
+                letter-spacing: 1px;
+                text-transform: uppercase;
+                color: basic.$txt_c;
+            }
+
+            span {
+                position: relative;
+                font-weight: 500;
+                align-items: flex-end;
+
+                &::before {
+                    position: absolute;
+                    top: 50%;
+                    left: -45%;
+                    transform: translateY(-50%);
+                    content: "";
+                    display: block;
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 50%;
+                    background: rgba(125, 157, 145, 0.5);
+                }
+            }
+        }
+
+        ul {
+            li {
+                margin: 0 0 15px 0;
+
+                div {
+                    border-bottom: 1px solid basic.$m_c;
+                    margin: 0 0 10px 0;
+                    padding: 0 0 10px 0;
+                }
+
+                span {
+                    color: basic.$s_c;
+                    margin: 0 10px 0 0;
+                    font-size: 35px;
+                    font-weight: 700;
+                    font-family: basic.$hah_f;
+                }
+
+                h3 {
+                    display: inline-block;
+                    letter-spacing: 1px;
+                    font-size: 25px;
+                    font-weight: 700;
+                    font-family: basic.$hah_f;
+                    color: basic.$txt_c;
+                }
+
+                p {
+                    font-size: 15px;
+                }
+            }
+        }
+
+    }
+
+    .S_right {
+        border-left: 3px solid basic.$m_c;
+    }
+}
+
+//Class
+.Class {
+    padding: 100px 0 0 0;
+
+    .inner {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 0 100px 0;
+
+        .C_left {
+
+            img {
+                width: 500px;
+                border-radius: 50% 50% 0 0;
+                border: 3px solid basic.$m_c;
+            }
+
+        }
+
+        .C_right {
+            .circle {
+                position: relative;
+                height: 100px;
+                width: 100px;
+                background: rgba(125, 157, 145, 0.5);
+                border-radius: 50%;
+                margin: 0 auto 50px auto;
+
+                h2 {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    white-space: nowrap;
+                    font-family: basic.$hah_f;
+                    font-size: 30px;
+                    font-weight: 800;
+                    letter-spacing: 1px;
+                    text-transform: uppercase;
+                    color: basic.$txt_c;
+                    text-align: center;
+                }
+            }
+
+            ul {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                margin: 0 0 30px 0;
+
+                li {
+                    padding: 0 0 20px 0;
+                    text-align: center;
+                    border-bottom: 2px solid basic.$m_c;
+
+                    h3 {
+                        margin: 0 0 15px 0;
+                        font-size: 35px;
+                        font-weight: 700;
+                        font-family: basic.$hah_f;
+                        color: basic.$txt_c;
+
+                    }
+                }
+            }
+
+            .C_button {
+                position: relative;
+                display: block;
+                text-align: center;
+                margin: 60px 0 0 0;
+                font-size: 21px;
+                font-weight: 700;
+                font-family: basic.$hah_f;
+                color: basic.$txt_c;
+
+                &::before {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    content: "";
+                    display: block;
+                    width: 230px;
+                    height: 70px;
+                    border: 1px solid basic.$txt_c;
+                    border-radius: 50%;
+                }
+
+                &::after {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%) rotate(-6deg);
+                    content: "";
+                    display: block;
+                    width: 230px;
+                    height: 70px;
+                    border: 1px solid basic.$txt_c;
+                    border-radius: 50%;
+                }
+            }
+
+        }
+    }
+
+    .txt_line {
+        background: basic.$m_c;
+        color: basic.$txt_c;
+        line-height: 45px;
+        font-size: 25px;
+        font-weight: 700;
+        font-family: basic.$hah_f;
     }
 }
