--- a/05-1_louispoulse/css/main.css
+++ b/05-1_louispoulse/css/main.css
@@ -28,6 +28,12 @@
     display: flex;
 }
 
+h2 {
+    font-size: 50px;
+    font-weight: 700;
+    font-family: 'SBAggroB';
+}
+
 .m_right {
     flex: auto;
 }
@@ -175,10 +181,6 @@ header .top button {
 
 .main_visual .inner h2 {
     margin: 0 0 30px 0;
-    font-size: 50px;
-    font-weight: 700;
-    font-family: 'SBAggroB';
-
 }
 
 .main_visual .inner h2 span {
@@ -285,12 +287,6 @@ header .top button {
     top: 50%;
     left: 48%;
     transform: translateY(-50%);
-}
-
-.best .left .txt h2 {
-    font-family: 'SBAggroB';
-    font-size: 50px;
-    font-family: 100;
 }
 
 .best .left .txt h2:nth-child(2) {
@@ -426,8 +422,6 @@ header .top button {
 
 .col .content .tit h2 {
     margin: 0 0 30px 0;
-    font-family: 'SBAggroB';
-    font-size: 50px;
     font-weight: 400;
 }
 
@@ -460,10 +454,6 @@ header .top button {
     color: #111;
 }
 
-/* .col .content .tit a:hover::after {
-    background: #111;
-} */
-
 .col .content .pick {
     position: relative;
 }
@@ -475,21 +465,31 @@ header .top button {
     font-weight: 600;
 }
 
+
+
 .col .content .col_arrow {
     position: absolute;
-    top: 40%;
+    top: 38%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #999;
-    font-size: 21px;
+    opacity: 0;
+    padding: 5px;
+    color: #fff;
+    font-size: 31px;
+    background: rgba(0, 0, 0, 0.5);
+    transition: 0.5s;
+}
+
+.col .content .pick:hover .col_arrow {
+    opacity: 1;
 }
 
 .col .content .a_L {
-    margin: 0 0 0 -310px;
+    margin: 0 0 0 -300px;
 }
 
 .col .content .a_R {
-    margin: 0 0 0 310px;
+    margin: 0 0 0 300px;
 }
 
 .col .content .itm_slide figure {
@@ -537,11 +537,12 @@ header .top button {
     transform: translateX(-22px);
 }
 
+
 /* designer */
 .designer {
     position: relative;
     height: 100vh;
-    background: #222;
+    background: #111;
     overflow: hidden;
 }
 
@@ -552,22 +553,27 @@ header .top button {
     transform: translateY(-50%);
 }
 
-.designer .tit h2 {
-    color: #222;
-    text-shadow: 0 0 1px #fff;
-    margin: 0 0 30px 0;
-    font-size: 80px;
-    font-weight: 900;
+
+.designer .tit h2>span {
     font-family: 'SBAggroB';
-    line-height: 120%;
+    font-size: 70px;
+    line-height: 1.25;
+    color: #fff;
+    background: linear-gradient(to top, #999 50%, transparent 50%)
 }
 
 .designer .tit a {
     display: block;
     text-align: center;
-    color: #fff;
+    color: rgba(255, 255, 255, 0.5);
     margin: 0 auto;
     line-height: 30px;
+    font-size: 25px;
+    transition: 0.5s;
+}
+
+.designer .tit a:hover {
+    color: #fff;
 }
 
 .designer .tit .d_arrow {
@@ -575,19 +581,21 @@ header .top button {
     display: inline-block;
     width: 60px;
     height: 1px;
-    background: #fff;
-    margin: 0 0 5px 10px;
+    background: rgba(255, 255, 255, 0.5);
+    margin: 0 0 5px 15px;
+    transition: 0.5s;
 }
 
 .designer .tit .d_arrow::before {
     position: absolute;
-    top: -25px;
-    left: -150%;
+    top: -35px;
+    left: -105px;
     content: "";
-    width: 100px;
-    height: 40px;
-    border: 1px solid #fff;
+    width: 130px;
+    height: 60px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 50%;
+    transition: 0.5s;
 }
 
 .designer .tit .d_arrow::after {
@@ -597,9 +605,19 @@ header .top button {
     content: "";
     width: 15px;
     height: 1px;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.5);
     transform: rotate(45deg);
     transform-origin: top right;
+    transition: 0.5s;
+}
+
+.designer .tit a:hover .d_arrow::after,
+.designer .tit a:hover .d_arrow {
+    background: #fff;
+}
+
+.designer .tit a:hover .d_arrow::before {
+    border: 1px solid #fff;
 }
 
 .designer .photo_s {
@@ -630,4 +648,155 @@ header .top button {
 /* magazine */
 .magazine {
     padding: 100px 0;
+}
+
+.magazine h2 {
+    margin: 0 0 10px 0;
+    text-align: center;
+}
+
+.magazine p {
+    font-size: 17px;
+    font-weight: 500;
+    margin: 0 0 30px 0;
+    text-align: center;
+}
+
+.magazine .container {
+    display: flex;
+    gap: 40px;
+}
+
+.magazine figure {
+    position: relative;
+    flex: 1;
+}
+
+.magazine figure::after {
+    position: absolute;
+    top: 20px;
+    right: -20px;
+    content: "";
+    width: 100%;
+    height: 100%;
+    display: block;
+    opacity: 0;
+    border: 2px solid #222;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.magazine figure:hover::after {
+    opacity: 1;
+}
+
+.magazine figure img {
+    width: 100%;
+    margin: 0 0 15px 0;
+}
+
+.magazine .txt {
+    text-align: center;
+}
+
+.magazine .txt h3 {
+    font-size: 24px;
+    font-weight: 700;
+    margin: 0 0 10px 0;
+    text-transform: uppercase;
+}
+
+.magazine .txt strong {
+    color: rgba(0, 0, 0, 0.3);
+    font-size: 35px;
+    font-weight: 800;
+    font-family: 'SBAggroB';
+}
+
+/* footer */
+footer {
+    padding: 50px 0;
+    background: #111;
+    color: #fff;
+}
+
+footer .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+footer .container figure {
+    width: 200px;
+    margin: auto 0;
+}
+
+footer .container .center {
+    margin: auto 0;
+}
+
+footer .container .top {
+    margin-bottom: 20px;
+}
+
+footer .container .top dd a {
+    font-size: 17px;
+    font-weight: 700;
+}
+
+footer .container .top dd a:hover {
+    color: #666;
+    text-decoration: overline;
+}
+
+footer .container .bottom dl {
+    margin-bottom: 10px;
+}
+
+footer .container .center dl>dd {
+    display: inline-block;
+    font-size: 13px;
+}
+
+footer .container .center dl>dd~dd::before {
+    content: "";
+    display: inline-block;
+    margin: 0 15px;
+    width: 1px;
+    height: 11px;
+    background: #333;
+}
+
+footer .container .cs dl>dd,
+footer .container.cs dl>dt {
+    margin: 10px 0;
+    font-size: 13px;
+    font-weight: 500;
+}
+
+footer .container .cs dl a {
+    font-size: 19px;
+    font-weight: 700;
+}
+
+/* scrollbtn */
+.scrollbtn {
+    position: fixed;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    z-index: 999;
+    overflow: hidden;
+}
+
+.scrollbtn i {
+    background: #111;
+    color: #fff;
+    padding: 12px;
+    cursor: pointer;
+}
+
+.scrollbtn i:nth-child(1) {
+    border-bottom: 1px solid #fff;
 }
